--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Yadhu's Personal Site</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Lato&family=Merriweather:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
   <div class="topcontainer">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="cloud.png" alt="cloud-img">
     <h1>I'm Yadhu.</h1>
     <h2 class="intro">a <span class="pro">Pro</span>grammer.</h2>
-    <img class ="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img class ="bottom-cloud" src="cloud.png" alt="cloud-img">
+    <img src="mountain.png" alt="mountain-img">
   </div>
   <div class="middle-container">
     <div class="profile">
@@ -25,12 +25,12 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="java-pic" src="images/java.png" alt="java-pic">
+        <img class="java-pic" src="java.png" alt="java-pic">
         <h3>Java</h3>
         <p>I'm well-versed in Java and am able to create efficient algorithms for any user application.</p>
       </div>
       <div class="skill-row">
-        <img class="web-design-pic" src="images/design.png" alt="web-design-pic">
+        <img class="web-design-pic" src="design.png" alt="web-design-pic">
         <h3>Web Development</h3>
         <p>Ameteur web developer with skills picked up through online courses.</p>
       </div>
